--- a/WebApplication_CodiJob/appsettings.json
+++ b/WebApplication_CodiJob/appsettings.json
@@ -1,12 +1,17 @@
 {
+  // Sirve tambien para configurar la aplicacion
+  "AppSettings": {
+    "Secret": "My_Dear gfcg fhfghfthgdrhgtfhfghgfj fghjgh jghjhgjfg hgfhgf"
+  },
   "Data": {
     "CodiJob": {
-      "ConnectionString": "Data Source = DANOSHINPC\\SQLEXPRESS; Initial Catalog = CodiJob; Integrated Security = True"
-      //"ConnectionString": "data source = 172.23.0.209; initial catalog = CodiJob; user id = sa; password = desarrollo2012"
+      //"ConnectionString": "Data Source = DANOSHINPC\\SQLEXPRESS; Initial Catalog = CodiJob; Integrated Security = True"
+      "ConnectionString": "Data Source = DANOSHINPC\\SQLEXPRESS; Initial Catalog = CodiJob; Integrated Security = SSPI"
+      //"ConnectionString": "data source = 172.23.0.211; initial catalog = CodiJob; user id = sa; password = desarrollo2012"
     },
     "CodiJobIdentity": {
-      "ConnectionString": "Data Source = DANOSHINPC\\SQLEXPRESS; Initial Catalog = CodiJobIdentity; Integrated Security = True"
-      //"ConnectionString": "data source = 172.23.0.209; initial catalog = CodiJobIdentityCD; user id = sa; password = desarrollo2012"
+      "ConnectionString": "Data Source = DANOSHINPC\\SQLEXPRESS; Initial Catalog = CodiJobIdentity; Integrated Security = SSPI"
+      //"ConnectionString": "data source = 172.23.0.211; initial catalog = CodiJobIdentityCD; user id = sa; password = desarrollo2012"
 
     }
   }
